CSS spacing fixes

--- a/mainCssFile.css
+++ b/mainCssFile.css
@@ -1,34 +1,31 @@
 body {
     background-color: black;
+    font-family: 'Roboto Mono';
 }
 
 /* ---------- Text ---------- */
 
 h1 {
     font-size: 96px;
-    font-family: 'Roboto Mono';
     color: white;
     text-align: center;
-    margin-top: 5%;
 }
 
 h4 {
     font-size: 36px;
-    font-family: 'Roboto Mono';
     color: white;
     text-align: center;
+    margin-bottom: 1%;
 }
 
 h6 {
     font-size: 28px;
-    font-family: 'Roboto Mono';
     color: white;
     text-align: center;
 }
 
 a {
     font-size: 36px;
-    font-family: 'Roboto Mono';
     font-weight: 300;
     color: white;
     text-decoration: none;
@@ -40,10 +37,8 @@ a:hover {
 
 p {
     font-size: 20px;
-    font-family: 'Roboto Mono';
     color: white;
     text-align: center;
-    margin-top: 5%;
 }
 
 .contactHref {
@@ -61,13 +56,13 @@ p {
 #projectFlexbox {
     display: flex;
     justify-content: space-around;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 #aboutMeFlexbox {
     display: flex;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 #goBackFlexbox {
